--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "BTCPayWall",
-  "version": "1.0.0",
-  "description": "BTCPayWall is a WordPress plugin for publishers to charge for paid content. With the help of WordPress BTCPayWall plugin you can offer previews of your blog posts and accept bitcoin payment for a single post (pay-per-post) via Lightning Network.",
+  "version": "1.0.8",
+  "description": "The Bitcoin Paywall to sell content and digital goods on WordPress.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
