--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,8 @@
     "require-dev": {
         "phpunit/phpunit": "^9",
         "yoast/phpunit-polyfills": "^1.0"
+    },
+    "require": {
+        "mpdf/mpdf": "^6.1"
     }
 }
