--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "BTCPayWall",
-  "version": "1.1.0",
+  "version": "1.1.3.1",
   "description": "The Bitcoin Paywall to sell content and digital goods on WordPress.",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@wordpress/scripts": "^17.1.0"
+    "@wordpress/scripts": "^17.1.0",
+    "eslint-plugin-jquery": "^1.5.1"
   }
 }
