--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "BTCPayWall",
-  "version": "1.1.3.1",
+  "version": "1.1.3",
   "description": "The Bitcoin Paywall to sell content and digital goods on WordPress.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "wp-scripts start",
-    "build": "wp-scripts build"
+    "build": "wp-scripts build",
+    "lint:js": "wp-scripts lint-js"
   },
   "keywords": [],
   "author": "",
