--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "wp-scripts start",
     "build": "wp-scripts build",
+    "format": "wp-scripts format",
+    "lint:style": "wp-scripts lint-style",
     "lint:js": "wp-scripts lint-js"
   },
   "keywords": [],
